Fix z-index issue with toc

--- a/raw/noc_html/stylesheets/html.css
+++ b/raw/noc_html/stylesheets/html.css
@@ -75,6 +75,7 @@ ______________________________________________________________________________*/
   position: fixed;
   top: 0;
   width: 200px;
+  z-index: 1;
 }
 
 #navigator,
@@ -141,6 +142,7 @@ ______________________________________________________________________________*/
   left: 200px;
   width: 300px;
   top: 0;
+  z-index: 2;
 }
 
 #toc-holder ul>ul li {
